# simple_swim_template

./: Cargo.toml  README.md  flake.nix
src/: buffer.rs  lib.rs  main.rs
