[package]
name = "simple_swim_template"
version = "0.1.0"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.30"
pc-keyboard = "0.8.0"
pluggable_interrupt_os = "0.5.3"

[dependencies.num]
version = "0.4.0"
default-features = false

[dependencies.crossbeam]
version = "0.8"
default-features = false
