[package]
name = "simple_swim_template"
version = "0.1.0"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.30"
pc-keyboard = "0.8.0"
pluggable_interrupt_os = "0.5.3"
compiler_builtins = { version = "0.1", features = ["mem"] }
simple_interp = {git = "https://github.com/gjf2a/simple_interp"}
gc_headers = {git = "https://github.com/gjf2a/gc_headers" }
ramdisk = {git = "https://github.com/gjf2a/ramdisk"}
gc_heap_template = {git = "https://github.com/tedbjurlin/gc_heap"}
file_system_solution = {git = "https://github.com/tedbjurlin/swim_file_system"}

[dependencies.num]
version = "0.4.0"
default-features = false

[dependencies.crossbeam]
version = "0.8"
default-features = false
